changed button colors

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
   <h2>Tasks</h2>
   <div class="card" style="width: 25rem;">
     <div class="card-body">
-      <a href="#" href="#" class="btn-group">
-        <button id="red">Not Started</button>
-        <button id="yellow">In Progress</button>
-        <button id="green">Done</button>
+      <a href="#" class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-secondary btn-danger">Not Started</button>
+        <button type="button" class="btn btn-secondary btn-warning">In Progress</button>
+        <button type="button" class="btn btn-secondary btn-success">Done</button>
       </a>
     </div>
     <h4 class="card-subtitle mb-2 text-muted">Task Name: Clean the kitchen</h4>
@@ -57,10 +57,10 @@
   <br>
   <div class="card" style="width: 25rem;">
     <div class="card-body">
-      <a href="#" href="#" class="btn-group">
-        <button>Not Started</button>
-        <button>In Progress</button>
-        <button>Done</button>
+      <a href="#" class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-secondary btn-danger">Not Started</button>
+        <button type="button" class="btn btn-secondary btn-warning">In Progress</button>
+        <button type="button" class="btn btn-secondary btn-success">Done</button>
       </a>
     </div>
     <h4 class="card-subtitle mb-2 text-muted">Task Name: Take out the trash</h4>
@@ -72,10 +72,10 @@
   <br>
   <div class="card" style="width: 25rem;">
     <div class="card-body">
-      <a href="#" href="#" class="btn-group">
-        <button>Not Started</button>
-        <button>In Progress</button>
-        <button>Done</button>
+      <a href="#" class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-secondary btn-danger">Not Started</button>
+        <button type="button" class="btn btn-secondary btn-warning">In Progress</button>
+        <button type="button" class="btn btn-secondary btn-success">Done</button>
       </a>
     </div>
     <h4 class="card-subtitle mb-2 text-muted">Task Name: Pick up dirty clothes</h4>
@@ -87,10 +87,10 @@
   <br>
   <div class="card" style="width: 25rem;">
     <div class="card-body">
-      <a href="#" class="btn-group">
-        <button>Not Started</button>
-        <button>In Progress</button>
-        <button>Done</button>
+      <a href="#" class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-secondary btn-danger">Not Started</button>
+        <button type="button" class="btn btn-secondary btn-warning">In Progress</button>
+        <button type="button" class="btn btn-secondary btn-success">Done</button>
       </a>
     </div>
     <h4 class="card-subtitle mb-2 text-muted">Task Name: Wash Laundry</h4>
@@ -102,10 +102,10 @@
   <br>
   <div class="card" style="width: 25rem;">
     <div class="card-body">
-      <a href="#" href="#" class="btn-group">
-        <button>Not Started</button>
-        <button>In Progress</button>
-        <button>Done</button>
+      <a href="#" class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-secondary btn-danger">Not Started</button>
+        <button type="button" class="btn btn-secondary btn-warning">In Progress</button>
+        <button type="button" class="btn btn-secondary btn-success">Done</button>
       </a>
     </div>
     <h4 class="card-subtitle mb-2 text-muted">Task Name: Clean car</h4>
