--- a/slimIndex.html
+++ b/slimIndex.html
@@ -8,14 +8,20 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Task Container-->
     <div class="container">
         <div id="newtask">
             <input type="text" placeholder="Add Tasks">
+            <input type="text" placeholder="Description">
+            <input type="text" placeholder="Assigned to">
+            <input type="text" placeholder="Due Date">
+            <input type="text" placeholder="Status">
             <button id="push">Add</button>
         </div>
         <div id="tasks"></div>
     
     </div>
+    <!-- JavaScript Link-->
     <script src="assets/js/script.js"></script>
 </body>
 </html>
