--- a/slimIndex.html
+++ b/slimIndex.html
@@ -11,14 +11,16 @@
     <!--Task Container-->
     <div class="container">
         <div id="newtask">
-            <input type="text" placeholder="Add Tasks">
-            <input type="text" placeholder="Description">
-            <input type="text" placeholder="Assigned to">
-            <input type="text" placeholder="Due Date">
-            <input type="text" placeholder="Status">
+            <input type="text" placeholder="Add Tasks" name="taskname" >
+            <input type="text" placeholder="Description" name="description"  >
+            <input type="text" placeholder="Assigned to " name="assignedto" >
+            <input type="text" placeholder="Due Date" name="duedate">
+             <input type="text" placeholder="Status" name="status">
             <button id="push">Add</button>
         </div>
-        <div id="tasks"></div>
+        <div id="tasks">
+            
+        </div>
     
     </div>
     <!-- JavaScript Link-->
