--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="banner">
         <h1>Task List</h1>
     </div>
-    <div class="container">
+    <div class="container form-control">
         <!-- Task Form -->
-        <form id="taskForm">
+        <form id="taskForm" >
             <div class="form-group">
                 <label for="taskName">Name</label>
                 <input type="text" class="form-control" id="taskName" placeholder="Enter task name">
