--- a/index.html
+++ b/index.html
@@ -1,47 +1,59 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Task Manager</title>
 </head>
 <body>
-    <header>
+    <header class="bg-primary text-white p-4">
         <h1>Task Manager</h1>
     </header>
 
-    <main>
+    <main class="p-4">
         <section>
             <h2>New Task</h2>
-            <form id="taskForm">
-                <label for="name">Task Name:</label>
-                <input type="text" id="name" required>
-                <label for="description">Task Description:</label>
-                <textarea id="description" required></textarea>
-                <label for="assignedTo">Assigned To:</label>
-                <input type="text" id="assignedTo" required>
-                <label for="dueDate">Due Date:</label>
-                <input type="date" id="dueDate" required>
-                <label for="status">Status:</label>
-                <select id="status" required>
-                    <option value="TODO">TODO</option>
-                    <option value="IN PROGRESS">IN PROGRESS</option>
-                    <option value="DONE">DONE</option>
-                </select>
-                <button type="submit">Add Task</button>
+            <form id="taskForm" class="mb-4">
+                <div class="form-group">
+                    <label for="name">Task Name:</label>
+                    <input type="text" class="form-control" id="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="description">Task Description:</label>
+                    <textarea class="form-control" id="description" required></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="assignedTo">Assigned To:</label>
+                    <input type="text" class="form-control" id="assignedTo" required>
+                </div>
+                <div class="form-group">
+                    <label for="dueDate">Due Date:</label>
+                    <input type="date" class="form-control" id="dueDate" required>
+                </div>
+                <div class="form-group">
+                    <label for="status">Status:</label>
+                    <select class="form-control" id="status" required>
+                        <option value="TODO">TODO</option>
+                        <option value="IN PROGRESS">IN PROGRESS</option>
+                        <option value="DONE">DONE</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary">Add Task</button>
             </form>
         </section>
 
         <section>
             <h2>Tasks</h2>
-            <ul id="taskList"></ul>
+            <ul id="taskList" class="list-group"></ul>
         </section>
     </main>
 
-    <!-- <script src="assets/js/TaskManager.js"></script> -->
-    <script src="assets/js/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="assets/js/TaskManager.js"></script>
+    <script src="assets/js/index.js" type="module"></script>
 </body>
 </html>
