--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <title>Task Manager</title>
 </head>
 <body>
+    <!-- Header -->
     <header class="bg-primary text-white p-4">
         <h1>Task Manager</h1>
     </header>
 
+    <!-- Main Content -->
     <main class="p-4">
+        <!-- New Task Section -->
         <section>
             <h2>New Task</h2>
             <form id="taskForm" class="mb-4">
@@ -36,7 +39,7 @@
                     <label for="status">Status:</label>
                     <select class="form-control" id="status" required>
                         <option value="TODO">TODO</option>
-                        <option value="IN PROGRESS">IN PROGRESS</option>
+                        <option value="IN-PROGRESS">IN PROGRESS</option>
                         <option value="DONE">DONE</option>
                     </select>
                 </div>
@@ -44,16 +47,20 @@
             </form>
         </section>
 
+        <!-- Tasks Section -->
         <section>
             <h2>Tasks</h2>
             <ul id="taskList" class="list-group"></ul>
         </section>
     </main>
 
+    <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <script src="assets/js/TaskManager.js"></script>
+
+    <!-- Task Manager JavaScript -->
+    <script src="assets/js/TaskManager.js" type="module"></script>
     <script src="assets/js/index.js" type="module"></script>
 </body>
 </html>
