--- a/index.html
+++ b/index.html
@@ -8,14 +8,23 @@
     <title>Task Manager</title>
 </head>
 <body>
-    <!-- Header -->
-    <header class="bg-primary text-white p-4">
-        <h1>Task Manager</h1>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand">JJEH Solutions</a>
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </nav>
+    <header class="bg-secondary text-black p-4 rounded">
+        <h1 class="text-center">Task Manager</h1>
     </header>
 
-    <!-- Main Content -->
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col col-xl-10">
+        <div class="card">
+        <div class="card-body p-5">
     <main class="p-4">
-        <!-- New Task Section -->
         <section>
             <h2>New Task</h2>
             <form id="taskForm" class="mb-4">
@@ -39,28 +48,29 @@
                     <label for="status">Status:</label>
                     <select class="form-control" id="status" required>
                         <option value="TODO">TODO</option>
-                        <option value="IN-PROGRESS">IN PROGRESS</option>
+                        <option value="IN PROGRESS">IN PROGRESS</option>
                         <option value="DONE">DONE</option>
                     </select>
                 </div>
                 <button type="submit" class="btn btn-primary">Add Task</button>
             </form>
         </section>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
 
-        <!-- Tasks Section -->
         <section>
             <h2>Tasks</h2>
             <ul id="taskList" class="list-group"></ul>
         </section>
     </main>
 
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-
-    <!-- Task Manager JavaScript -->
-    <script src="assets/js/TaskManager.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+    <script src="assets/js/TaskManager.js"></script>
     <script src="assets/js/index.js" type="module"></script>
 </body>
 </html>
