--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Task Manager</title>
 </head>
@@ -18,9 +18,9 @@
         <!-- New Task Section -->
         <section>
             <h2>New Task</h2>
-            <form id="taskForm" class="mb-4">
+            <form id="task-form" class="mb-4">
                 <div class="form-group">
-                    <label for="name">Task Name:</label>
+                    <label for="name">Name:</label>
                     <input type="text" class="form-control" id="name" required>
                 </div>
                 <div class="form-group">
@@ -50,7 +50,7 @@
         <!-- Tasks Section -->
         <section>
             <h2>Tasks</h2>
-            <ul id="taskList" class="list-group"></ul>
+            <ul id="task-list" class="list-group"></ul>
         </section>
     </main>
 
