--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <!-- New Task Section -->
         <section>
             <h2>New Task</h2>
+            <div id="error-alert" class="alert alert-danger d-none" role="alert">
+                A simple danger alert—check it out!
+              </div>
             <form id="task-form" class="mb-4">
                 <div class="form-group">
                     <label for="name">Name:</label>
