--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
     <title>Task Manager</title>
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-navy-blue">
         <a class="navbar-brand">JJEH Solutions</a>
-        <form class="form-inline">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </nav>
-    <header class="bg-secondary text-black p-4 rounded">
+    <header class="text-black p-4 rounded">
         <h1 class="text-center">Task Manager</h1>
     </header>
 
@@ -28,30 +24,30 @@
         <section>
             <h2>New Task</h2>
             <div id="error-alert" class="alert alert-danger d-none" role="alert">
-                A simple danger alert—check it out!
+                Please Fill Out All Fields!
               </div>
             <form id="task-form" class="mb-4">
                 <div class="form-group">
                     <label for="name">Name:</label>
-                    <input type="text" class="form-control" id="name" required>
+                    <input type="text" class="form-control" id="name" >
                 </div>
                 <div class="form-group">
                     <label for="description">Task Description:</label>
-                    <textarea class="form-control" id="description" required></textarea>
+                    <textarea class="form-control" id="description" ></textarea>
                 </div>
                 <div class="form-group">
                     <label for="assignedTo">Assigned To:</label>
-                    <input type="text" class="form-control" id="assignedTo" required>
+                    <input type="text" class="form-control" id="assignedTo">
                 </div>
                 <div class="form-group">
                     <label for="dueDate">Due Date:</label>
-                    <input type="date" class="form-control" id="dueDate" required>
+                    <input type="date" class="form-control" id="dueDate">
                 </div>
                 <div class="form-group">
                     <label for="status">Status:</label>
-                    <select class="form-control" id="status" required>
+                    <select class="form-control" id="status">
                         <option value="TODO">TODO</option>
-                        <option value="IN PROGRESS">IN PROGRESS</option>
+                        <option value="IN-PROGRESS">IN-PROGRESS</option>
                         <option value="DONE">DONE</option>
                     </select>
                 </div>
@@ -64,10 +60,20 @@
     </div>
     </div>
 
-        <section>
+<div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col col-xl-10">
+        <div class="card">
+        <div class="card-body p-5">
+ <section>
             <h2>Tasks</h2>
             <ul id="task-list" class="list-group"></ul>
         </section>
+    </div>
+</div>
+</div>
+</div>
+</div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
